# pincer-x402-starter

./: .env.example  .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: publish_docs.yml  sdk-ci-cd.yml
architecture/: index.html
assets/: custom.css
audit_reports/: pincer_audit_2026_02_10_angradev.md  pincer_audit_2026_02_eric.md
contributing/: index.html
demo/: index.html
docs/: architecture.md  contributing.md  demo.md  index.md  sdk.md
docs/guides/: buyer.md  seller.md  sponsor.md
examples/: simple_client.py  sponsor_integration.py  x402_buyer_flow.py  x402_resource_integration.py
guides/buyer/: index.html
guides/seller/: index.html
guides/sponsor/: index.html
scripts/: generate_solana_wallet.py  init_ledger.py  reset_demo.sh  run_all.py  setup_uv.sh  start_service.sh  test_payment.py
sdk/: index.html
search/: search_index.json
src/: config.py  database.py  logging_utils.py  models.py
src/agent/: __init__.py  demo.py  minimal.py
src/data/: campaigns.json
src/merchant/: __init__.py  server.py
src/pincer/: .env.example  __init__.py  offers.py  payout.py  server.py  skill.md  verification.py  webhooks.py
src/pincer_sdk/: README.md  __init__.py  client.py  merchant.py  merchant_utils.py  pyproject.toml  resource.py
src/resource/: __init__.py  server.py
src/topeats/: server.py
tests/: conftest.py
tests/integration/: test_full_flow.py
tests/sdk/: test_middleware.py  test_pincer_client.py
tests/unit/: test_anti_replay.py  test_budget_management.py  test_idempotency.py  test_resource_server.py  test_signature_verification.py
