[project]
name = "pincer-sdk"
version = "0.1.1"
description = "Pincer SDK for Python - Reference implementation for x402 protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "solana>=0.36.0",
    "solders>=0.21.0",
    "x402>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
